removed unnecessary command line arguments.